# brynolv-evper-ofjall-project

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.py  debug.gdb  file_to_write.txt  insert-file.sh  test.txt
.cargo/: config.toml
.github/workflows/: fmt.yml  rust.yml
src/: allocator.rs  gdt.rs  idt.rs  main.rs  pic.rs  printer.rs  ps2.rs  ps2_keyboard.rs  svec.rs
src/gui/: display.rs  mod.rs
src/gui/widget/: container.rs  editor.rs  file_dialog.rs  initializer.rs  message_box.rs  mod.rs  printer.rs
src/harddisk/: fat32.rs  mod.rs  partitions.rs  pata.rs
