[package]
name = "brynolv-evper-ofjall-project"
version = "0.1.0"
authors = ["Elekrisk <einar.vilhelm.persson@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0xffff_ff80_0000_0000"

[dependencies]
bootloader = "0.10"
rlibc = "*"
x86_64 = "0.14"
spin = "0.9"
